--- a/core/package.json
+++ b/core/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.0",
     "private": true,
     "dependencies": {
-        "bower": "1.2.8"
+        "bower": "1.2.8",
+        "protractor" : "~0.18.1"
     }
 }
