bugfix: Just copy base node plugin files rather than syncing.
This circumvents an apparent bug in the way Gradle sync works
with symlinks in the target directory on certain FS's; it attempts
to list the contents of all symlinks as if they were directories,
and errors out as the filesystem responds with a failure.

--- a/plugin/node/build.gradle
+++ b/plugin/node/build.gradle
@@ -1,5 +1,5 @@
 def installDir = hasProperty('evalPluginDir') ? new File(evalPluginDir, 'node') : project.buildDir
-task syncFiles (type: Sync) {
+task copyFiles (type: Copy) {
   from 'src/dist'
   into installDir
 }
@@ -12,5 +12,5 @@ task installNodePackages (type: Exec) {
 
 task installApp
 
-installNodePackages.dependsOn syncFiles
+installNodePackages.dependsOn copyFiles
 installApp.dependsOn installNodePackages
